# systematic-trend-following-with-managed-futures

./: CHANGELOG.md  LICENSE  README.md  SPEC.md  pyproject.toml
configs/: base.yaml  universe.yaml
docs/: ADD_INSTRUMENT.md  COST_MODEL_CALIBRATION.md  HOW_ROLL_WORKS.md  TECHNICAL_WHITE_PAPER.md
examples/: quickstart.py
examples/notebooks/: attribution.ipynb  comprehensive_demo.ipynb  parameter_study.ipynb  phase1_phase2_demo.ipynb  phase1_through_phase4_demo.ipynb  quick_start.ipynb  systematic_trend_following_showcase.ipynb
src/tf/: __init__.py  api.py  cli.py
src/tf/core/: utils.py
src/tf/costs/: slippage.py
src/tf/data/: __init__.py  calendar.py  continuous.py  ingest.py  metadata.py  synthetic.py  validators.py
src/tf/engine/: backtester.py  execution.py
src/tf/eval/: analytics.py  metrics.py
src/tf/portfolio/: sizing.py
src/tf/report/: exporter.py  plots.py
src/tf/research/: __init__.py  monte_carlo.py  sensitivity.py  walkforward.py
src/tf/risk/: vol.py
src/tf/signals/: __init__.py  breakout.py  momentum.py  moving_average.py  normalizers.py
tests/: conftest.py  test_api_cli.py  test_data_layer.py  test_engine.py  test_eval.py  test_portfolio.py  test_research.py  test_risk.py  test_signals.py
